krita/plugins/tools/tool_polyline/kis_tool_polyline.cc
@@ -56,7 +56,9 @@ void KisToolPolyline::finishPolyline(const QVector<QPointF>& points)
     if (!currentNode()->inherits("KisShapeLayer")) {
         KisFigurePaintingToolHelper helper(i18n("Polyline"),
                                            image(),
-                                           canvas()->resourceManager());
+                                           canvas()->resourceManager(),
+                                           strokeStyle(),
+                                           fillStyle());
         helper.paintPolyline(points);
     } else {
         KoPathShape* path = new KoPathShape();
